--- a/src/app/reset.scss
+++ b/src/app/reset.scss
@@ -5,6 +5,8 @@
 	padding: 0;
 
 	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 	border: 0;
 	outline: 0;
 	font-family: inherit;
