--- a/src/components/loading/Loading.module.scss
+++ b/src/components/loading/Loading.module.scss
@@ -1,72 +1,74 @@
 @use '../../app/vars' as *;
 
-.loadingContainer {
-	position: relative;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	z-index: 9999;
-}
+.loading {
+	&__container {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		z-index: 999;
+	}
 
-.loadingContent {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: $spacing-32;
-	max-width: 90%;
-	width: 100%;
-}
+	&__content {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: $spacing-32;
+		max-width: 90%;
+		width: 100%;
+	}
 
-.logoContainer {
-	position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 240px;
-	height: 82px;
-	animation: pulse 1.5s infinite alternate;
-}
+	&__logo-container {
+		position: relative;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 240px;
+		height: 82px;
+		animation: pulse 1.5s infinite alternate;
+	}
 
-.logoImage {
-	object-fit: contain;
-}
+	&__logo-image {
+		object-fit: contain;
+	}
 
-.loadingBarWrapper {
-	width: 280px;
-	height: 4px;
-	background-color: $gray-200;
-	border-radius: 2px;
-	overflow: hidden;
-	position: relative;
-}
+	&__bar-wrapper {
+		width: 280px;
+		height: 4px;
+		background-color: $gray-200;
+		border-radius: 2px;
+		overflow: hidden;
+		position: relative;
+	}
 
-.loadingBar {
-	height: 100%;
-	background: linear-gradient(to right, $secondary-color, $primary-color);
-	border-radius: 2px;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 30%;
-	animation: loading 1.5s infinite cubic-bezier(0.4, 0, 0.2, 1);
-}
+	&__bar {
+		height: 100%;
+		background: linear-gradient(to right, $secondary-color, $primary-color);
+		border-radius: 2px;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 30%;
+		animation: loading 1.5s infinite cubic-bezier(0.4, 0, 0.2, 1);
+	}
 
-.loadingText {
-	font-size: $font-size-16;
-	font-weight: $font-weight-semibold;
-	color: $txt-primary;
-	letter-spacing: 0.2em;
-}
+	&__text {
+		font-size: $font-size-16;
+		font-weight: $font-weight-semibold;
+		color: $txt-primary;
+		letter-spacing: 0.2em;
+	}
 
-.dots {
-	display: inline-block;
-	position: relative;
-	width: 24px;
-	animation: dotsPulse 1.4s infinite;
+	&__dots {
+		display: inline-block;
+		position: relative;
+		width: 24px;
+		animation: dotsPulse 1.4s infinite;
+	}
 }
 
 @keyframes pulse {
@@ -114,7 +116,11 @@
 }
 
 @media screen and (max-width: $breakpoint-md) {
-	.loadingContent {
+	.loading__content {
 		gap: $spacing-16;
+	}
+
+	.loading__logo-image {
+		transform: scale(0.8);
 	}
 }
