--- a/src/components/thumnail-nav-button/ThumbnailNavButton.module.scss
+++ b/src/components/thumnail-nav-button/ThumbnailNavButton.module.scss
@@ -9,7 +9,7 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 0 1.5rem;
+	padding: 0 1em;
 	width: 100%;
 	pointer-events: none;
 	z-index: 10;
