--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -118,11 +118,19 @@ $link-underline-offset: -0.5ch !default;
 	background-color: $primary-color;
 	color: $txt-white;
 
-	&:hover {
+	&.disabled {
+		color: $gray-300;
+		cursor: not-allowed;
+		box-shadow: none;
+		opacity: 0.75;
+		pointer-events: none;
+	}
+
+	&:hover:not(.disabled):not(:disabled) {
 		background-color: color.adjust($primary-color, $lightness: -5%);
 	}
 
-	&:active {
+	&:active:not(.disabled):not(:disabled) {
 		background-color: color.adjust($primary-color, $lightness: -10%);
 		transform: scale(0.97);
 	}
@@ -133,12 +141,21 @@ $link-underline-offset: -0.5ch !default;
 	color: $primary-color;
 	box-shadow: inset 0 0 0 2px $primary-color;
 
-	&:hover {
-		background-color: rgba($primary-color, 0.3);
-		color: $txt-white;
+	&.disabled {
+		background-color: transparent;
+		color: $gray-300;
+		box-shadow: inset 0 0 0 2px $gray-300;
+		cursor: not-allowed;
+		opacity: 0.75;
+		pointer-events: none;
 	}
 
-	&:active {
+	&:hover:not(.disabled):not(:disabled) {
+		background-color: rgba($primary-color, 0.08);
+		color: $primary-color;
+	}
+
+	&:active:not(.disabled):not(:disabled) {
 		transform: scale(0.97);
 	}
 }
