--- a/src/components/product-detail/ProductDetail.module.scss
+++ b/src/components/product-detail/ProductDetail.module.scss
@@ -18,7 +18,7 @@
 	display: flex;
 	overflow: hidden;
 	.imgs {
-		flex: 1 0 50%;
+		flex: 1 0 40%;
 		display: flex;
 		flex-direction: column;
 		gap: $spacing-16;
@@ -31,7 +31,7 @@
 				position: relative;
 				display: flex;
 				overflow: hidden;
-				border: 1px solid $txt-tertiary;
+				border: 1px solid $txt-light;
 				border-radius: $spacing-8;
 
 				.img {
@@ -73,7 +73,7 @@
 				display: flex;
 				align-items: center;
 				gap: $spacing-16;
-				overflow: hidden;
+				overflow-x: hidden;
 
 				.thumb {
 					cursor: pointer;
@@ -85,10 +85,11 @@
 					align-items: center;
 					justify-content: center;
 					border-radius: $spacing-8;
-					border: 1px solid $txt-tertiary;
+					border: 1px solid $txt-light;
 					overflow: hidden;
 					img {
 						aspect-ratio: 1;
+						border-radius: inherit;
 						transition: transform 0.2s ease-in-out;
 					}
 
@@ -99,7 +100,7 @@
 					}
 
 					&.active {
-						border: 1px solid $accent-color;
+						border: 1px solid $secondary-color;
 					}
 				}
 			}
@@ -168,6 +169,8 @@
 				&__label {
 					position: relative;
 					display: flex;
+					align-items: center;
+					height: max-content;
 					gap: $spacing-8;
 					font-weight: $font-weight-semibold;
 				}
