--- a/src/components/product-detail/ProductDetail.module.scss
+++ b/src/components/product-detail/ProductDetail.module.scss
@@ -166,7 +166,7 @@
 			position: relative;
 			display: flex;
 			flex-direction: column;
-			gap: $spacing-8;
+			gap: $spacing-4;
 			padding-left: 1ch;
 			font-size: $font-size-16;
 			margin-top: $spacing-24;
@@ -174,7 +174,6 @@
 			.feature {
 				display: flex;
 				gap: $spacing-8;
-				color: $txt-secondary;
 
 				&__label {
 					position: relative;
@@ -183,11 +182,12 @@
 					height: max-content;
 					gap: $spacing-8;
 					font-weight: $font-weight-semibold;
+					color: $txt-primary;
 				}
 
 				&__value {
 					font-weight: $font-weight-regular;
-					color: $txt-tertiary;
+					color: $txt-secondary;
 				}
 			}
 		}
