--- a/src/app/(pages)/home/Home.module.scss
+++ b/src/app/(pages)/home/Home.module.scss
@@ -14,6 +14,9 @@
 	width: 100%;
 	flex-direction: column;
 	gap: $spacing-24;
+	@media screen and (max-width: $breakpoint-md) {
+		padding: 0 $app-body-padding-x-mobile;
+	}
 }
 
 .itemSectionHeader {
@@ -23,12 +26,13 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: $spacing-4;
+	gap: $spacing-8;
 }
 
 .itemSectionTitle {
 	font-size: $font-size-32;
 	font-weight: $font-weight-semibold;
+	line-height: 1;
 	color: $accent-color;
 }
 
