fix(ui): sửa bug tự động kéo màn hình khi thực thi scroll element

--- a/src/components/ui/hero-section/HeroSection.module.scss
+++ b/src/components/ui/hero-section/HeroSection.module.scss
@@ -29,7 +29,8 @@
 	position: relative;
 	width: 100%;
 	display: flex;
-	overflow: hidden;
+	transition: transform 0.7s cubic-bezier(0.77, 0, 0.175, 1);
+	will-change: transform;
 
 	.item {
 		flex: 1 0 100%;
