--- a/src/components/ui/global-search/GlobalSearchResult.module.scss
+++ b/src/components/ui/global-search/GlobalSearchResult.module.scss
@@ -1,21 +1,21 @@
 @use '../../../app/vars' as *;
+@use 'sass:color';
 
 .gs-results {
 	position: absolute;
 	top: 110%;
-	right: 0;
-	width: 20em;
+	max-width: $app-max-width;
 	z-index: 20;
 	background-color: white;
 	border: 1px solid $black-200;
 	border-radius: 0.25rem;
-	box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.1);
+	box-shadow: 0 0 0.5em rgba($black-100, 0.5);
 	padding: $spacing-4;
 	font-size: 1em;
 
 	&-list {
 		position: relative;
-		max-height: calc(3.5em * 5);
+		max-height: calc(4.5em * 4.5);
 		display: flex;
 		flex-direction: column;
 		overflow-y: auto;
@@ -46,7 +46,7 @@
 
 	&-item {
 		cursor: pointer;
-		flex: 1 0 3.5em;
+		flex: 1 0 4.5em;
 		position: relative;
 		display: flex;
 		align-items: center;
@@ -132,12 +132,12 @@
 			transition: color 0.2s, text-decoration 0.2s;
 
 			&:hover {
-				color: darken($accent-color, 10%);
+				color: color.adjust($accent-color, $lightness: 10%);
 				text-decoration: underline;
 			}
 
 			&:active {
-				color: darken($accent-color, 15%);
+				color: color.adjust($accent-color, $lightness: 15%);
 			}
 		}
 	}
