feat(signin/signup): Hoàn thiện chức năng đăng ký, đăng nhập, xác thực email. Bổ sung cơ chế lên đơn

--- a/src/app/(pages)/home/Home.module.scss
+++ b/src/app/(pages)/home/Home.module.scss
@@ -48,3 +48,9 @@
 		text-underline-offset: 6px;
 	}
 }
+
+@media screen and (max-width: $breakpoint-sm) {
+	.content {
+		margin-bottom: $spacing-16;
+	}
+}
