--- a/src/app/(pages)/checkout/Checkout.module.scss
+++ b/src/app/(pages)/checkout/Checkout.module.scss
@@ -1,95 +1,115 @@
-@use '../../vars' as *;
+@use '../../_vars.scss' as *;
 
 .container {
 	display: flex;
-	gap: $spacing-16;
+	gap: $spacing-24;
+	flex-direction: column;
+	font-size: 16px;
+
+	@media (min-width: $breakpoint-lg) {
+		flex-direction: row;
+	}
 }
 
 .table {
+	border-radius: 8px;
+	font-size: 1em;
 	flex: 1;
+
+	&:last-child {
+		flex: 1;
+	}
 }
 
-.formTable {
-	.form {
-		display: flex;
-		flex-direction: column;
-		gap: $spacing-16;
-	}
+.form {
+	display: flex;
+	flex-direction: column;
+	gap: 0.875em;
+	font-size: 1em;
 }
 
 .orderTable {
-	.orderItems {
-		display: flex;
-		flex-direction: column;
-		gap: $spacing-16;
-		.orderItem {
-			position: relative;
-			display: flex;
-			align-items: center;
-			gap: $spacing-16;
-			padding: $spacing-16 0;
-			border-bottom: 1px solid $gray-300;
-
-			.itemName {
-				flex: 6;
-				font-size: $font-size-16;
-				font-weight: $font-weight-regular;
-				color: $txt-secondary;
-			}
-			.itemQuantity {
-				flex: 1;
-				text-align: center;
-				font-size: $font-size-16;
-				font-weight: $font-weight-regular;
-				color: $primary-color;
-			}
-			.itemPrice {
-				flex: 2;
-				text-align: right;
-				font-size: $font-size-16;
-				font-weight: $font-weight-semibold;
-				color: $primary-color;
-			}
-		}
-	}
-
-	.orderSummary {
-		position: relative;
-		display: flex;
-		flex-direction: column;
-		gap: $spacing-16;
-		margin-top: $spacing-32;
-
-		.orderSummaryItem {
-			display: flex;
-			justify-content: space-between;
-			align-items: center;
-			.orderSummaryLabel {
-				font-size: $font-size-16;
-				font-weight: $font-weight-semibold;
-				color: $txt-primary;
-			}
-
-			.orderSummaryValue {
-				font-size: $font-size-16;
-				font-weight: $font-weight-semibold;
-				color: $primary-color;
-			}
-		}
-	}
+	font-size: 1em;
 }
 
-.paymentMethods {
+.orderItems {
+	list-style: none;
+	margin: 0;
+	padding: 0;
 	display: flex;
 	flex-direction: column;
-	gap: $spacing-16;
+	gap: 0.75em;
+	font-size: 1em;
 }
 
-@media screen and (max-width: $breakpoint-md) {
-	.container {
-		flex-direction: column;
+.orderItem {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding-bottom: 0.75em;
+	border-bottom: 1px solid $gray-200;
+	font-size: 0.875em;
+}
+
+.itemName {
+	flex: 1;
+	margin: 0;
+	color: $txt-secondary;
+	font-weight: $font-weight-regular;
+}
+
+.itemPrice {
+	font-weight: $font-weight-semibold;
+	color: $secondary-color;
+}
+
+.itemQuantity {
+	padding: 0 0.75em;
+	color: $txt-secondary;
+}
+
+.orderSummary {
+	display: flex;
+	flex-direction: column;
+	gap: 0.5em;
+	margin-top: 2em;
+}
+
+.orderSummaryItem {
+	display: flex;
+	justify-content: space-between;
+	font-size: 1em;
+
+	.orderSummaryLabel {
+		color: $txt-primary;
+		font-weight: $font-weight-semibold;
+	}
+
+	.orderSummaryValue {
+		color: $secondary-color;
+		font-weight: $font-weight-semibold;
+	}
+
+	&.orderSummaryTotal {
+		border-top: 1px solid $secondary-color;
+		padding-top: 0.5em;
+		.orderSummaryLabel {
+			font-size: 1.125em;
+		}
+		.orderSummaryValue {
+			font-size: 1.125em;
+			color: $secondary-color;
+		}
 	}
 }
 
-@media screen and (max-width: $breakpoint-sm) {
+@media (max-width: $breakpoint-md) {
+	.formTable,
+	.orderTable {
+		width: 100%;
+	}
+
+	.container {
+		gap: $spacing-16;
+	}
 }
