--- a/src/app/(pages)/contact/Contact.module.scss
+++ b/src/app/(pages)/contact/Contact.module.scss
@@ -6,7 +6,7 @@
 	flex-direction: column;
 	align-items: center;
 	gap: $spacing-16;
-	margin-bottom: $spacing-56;
+	margin-bottom: $spacing-52;
 
 	.contactHeaderItem {
 		max-width: 500px;
@@ -111,28 +111,17 @@
 						font-size: $font-size-20;
 					}
 
-					transition: background-color 0.3s, transform 0.3s;
-
-					&:hover,
-					&:focus {
-						background-color: $primary-color;
-						transform: translateY(-4px) scale(1.08);
-
-						svg {
-							color: $white;
-						}
-					}
+					transition: background-color 0.3s, color 0.3s, transform 0.1s;
 
 					&:hover {
-						transform: translateY(-4px) scale(1.15) rotate(10deg);
-
+						background-color: $primary-color;
 						svg {
 							color: $white;
 						}
 					}
 
 					&:active {
-						transform: scale(0.95) rotate(0deg);
+						transform: scale(0.95);
 
 						svg {
 							color: $white;
@@ -164,7 +153,17 @@
 	}
 }
 
+@media screen and (max-width: $breakpoint-xl) {
+	.contactHeader {
+		margin-bottom: $spacing-32;
+	}
+}
+
 @media screen and (max-width: $breakpoint-md) {
+	.contactHeader {
+		margin-top: $spacing-32;
+	}
+
 	.contactBody {
 		flex-direction: column;
 
