--- a/src/app/(pages)/keyboard/Keyboards.module.scss
+++ b/src/app/(pages)/keyboard/Keyboards.module.scss
@@ -7,6 +7,10 @@
 	gap: $spacing-16;
 	width: 100%;
 	margin-top: $spacing-56;
+	@media screen and (max-width: $breakpoint-md) {
+		justify-content: center;
+		margin-bottom: 1em;
+	}
 }
 
 .KeyboardsPagination {
