--- a/src/components/ui/global-search/GlobalSearchResult.module.scss
+++ b/src/components/ui/global-search/GlobalSearchResult.module.scss
@@ -27,19 +27,19 @@
 			background: transparent;
 		}
 		&::-webkit-scrollbar-thumb {
-			background: rgba($black-200, 0.3);
+			background: rgba($accent-color, 0.15);
 			border-radius: 4px;
 			transition: background 0.2s;
 		}
 		&::-webkit-scrollbar-thumb:hover {
-			background: rgba($primary-color, 0.5);
+			background: rgba($accent-color, 1);
 		}
 		&::-webkit-scrollbar-track {
 			background: transparent;
 		}
 
 		scrollbar-width: thin;
-		scrollbar-color: rgba($black-200, 0.3) transparent;
+		scrollbar-color: rgba($accent-color, 0.15) transparent;
 
 		-ms-overflow-style: auto;
 	}
@@ -115,7 +115,7 @@
 		justify-content: center;
 		align-items: center;
 		width: 100%;
-		min-height: 1.5em;
+		min-height: 2em;
 		background-color: rgba($black-200, 0.25);
 		padding: 0.5ch 0;
 
