--- a/src/app/(full-layout)/profile/Profile.module.scss
+++ b/src/app/(full-layout)/profile/Profile.module.scss
@@ -30,7 +30,7 @@
 	&__title {
 		font-size: 1em;
 		font-weight: $font-weight-semibold;
-		margin-bottom: 0.5em;
+		margin-bottom: 1em;
 		color: $accent-color;
 	}
 
@@ -181,6 +181,10 @@
 	gap: 1em;
 }
 
+// info ADDITIONAL INFO
+.AdditionalInfo {
+}
+
 // info ACCOUNT INFO PAGE
 .account-info-detail {
 	display: grid;
@@ -194,7 +198,7 @@
 		align-items: center;
 		justify-content: space-between;
 		gap: 1em;
-		padding: 1em 0;
+		padding: 0.5em 0;
 		border-bottom: 1px solid rgba($black-200, 1);
 		font-size: 1em;
 
@@ -209,10 +213,10 @@
 			color: $txt-primary;
 			font-weight: $font-weight-semibold;
 			text-align: right;
+		}
 
-			white-space: nowrap;
-			overflow: hidden;
-			text-overflow: ellipsis;
+		&:nth-child(-n + 2) {
+			padding-top: 0;
 		}
 
 		&:nth-last-child(-n + 2) {
@@ -224,10 +228,10 @@
 .account-info-actions {
 	&__list {
 		display: flex;
-		flex-direction: column;
-		gap: 0.5em;
+		flex-wrap: wrap;
 		margin: 0;
 		padding: 0;
+		gap: 1em;
 		font-size: 1em;
 
 		&__item {
@@ -236,13 +240,13 @@
 			display: flex;
 			align-items: center;
 			gap: $spacing-12;
-			padding: 0.25em 0;
+			padding: 0.5em;
 			color: $txt-secondary;
-			border-radius: $spacing-8;
-			border: 1px solid transparent;
+			border: 1px solid $txt-tertiary;
+			border-radius: 0.25em;
 			transition: all 0.2s cubic-bezier(0.4, 0, 0.2, 1);
 			font-weight: $font-weight-regular;
-			background-color: transparent;
+			white-space: nowrap;
 
 			svg {
 				flex: 0 0 1em;
@@ -280,6 +284,7 @@
 
 			&--danger {
 				color: map.get($error, text);
+				border-color: map.get($error, icon);
 
 				svg {
 					color: map.get($error, icon);
@@ -519,11 +524,118 @@
 		gap: 0.5em;
 	}
 
+	.list-part--horizontal {
+		gap: 0.5em;
+	}
+
 	.left {
 		flex: 1 0 100%;
+		gap: 0.5em;
 	}
 
 	.right {
 		flex: 1 0 100%;
+		gap: 0.5em;
+	}
+}
+
+@media screen and (max-width: $breakpoint-md) {
+	.container {
+	}
+
+	.part {
+		border-radius: 0;
+	}
+
+	.left {
+	}
+
+	.right {
+	}
+
+	// info ACCOUNT INFO PAGE
+	.account-info-detail {
+		display: flex;
+		flex-direction: column;
+
+		&__item {
+			display: flex;
+			flex-direction: column;
+			align-items: flex-start;
+			gap: 0.5em;
+			padding: 0.5em 0;
+
+			&__value {
+				text-align: left;
+				width: 100%;
+			}
+
+			&:nth-child(-n + 2) {
+				padding-top: 0.5em;
+			}
+
+			&:nth-last-child(-n + 2) {
+				border-bottom: 1px solid rgba($black-200, 1);
+			}
+
+			&:first-child {
+				padding-top: 0;
+			}
+
+			&:last-child {
+				border-bottom: none;
+			}
+		}
+	}
+
+	.account-info-actions {
+		&__list {
+			gap: 0.5em;
+		}
+	}
+
+	// info ADDRESS MANAGEMENT PAGE
+	.shipping-address-list {
+		&__item {
+			flex-direction: column;
+			align-items: flex-start;
+			gap: 0.5em;
+			padding: 0.5em;
+
+			&__info {
+				flex-direction: column;
+				width: 100%;
+
+				&__text {
+					width: 100%;
+				}
+			}
+
+			&__actions {
+				gap: 0.5em;
+
+				button {
+					width: 100%;
+					text-align: center;
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: $breakpoint-sm) {
+	.container {
+	}
+
+	.left {
+	}
+
+	.right {
+	}
+
+	// info ACCOUNT INFO PAGE
+	.AdditionalInfo {
+		display: flex;
+		flex-direction: column-reverse;
 	}
 }
