--- a/src/app/(view-center)/NotificationLayout.module.scss
+++ b/src/app/(view-center)/NotificationLayout.module.scss
@@ -1,7 +1,5 @@
-.authLayout {
-	position: relative;
+.NotificationLayout {
 	width: 100%;
-	min-height: max-content;
 	height: 100vh;
 	display: flex;
 	justify-content: center;
