--- a/src/app/(public-routes)/cart/Cart.module.scss
+++ b/src/app/(public-routes)/cart/Cart.module.scss
@@ -54,7 +54,7 @@
 	position: relative;
 	aspect-ratio: 1;
 	min-width: calc($unit * 20);
-	border-radius: $spacing-8;
+	border-radius: 0.25em;
 	background-color: $gray-200;
 	border: 1px solid $gray-300;
 	overflow: hidden;
